--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,21 @@
+qemu (1.3.0+dfsg-4exp) experimental; urgency=low
+
+  * install forgotten /etc/qemu-ifdown (dummy, but qemu complains without it)
+  * install virtfs-proxy-helper in qemu-system not qemu-utils
+  * add qemu-kvm.NEWS mentioning transition from qemu-kvm to qemu-system-x86_64.
+  * do not pass -cpu kvm64 to qemu in kvm wrapper script, previous qemu-kvm
+    used qemu64 cpu instead - the same as new qemu uses.
+  * install kvm wrapper on x86 only, and install it as /usr/bin/kvm not
+    /usr/bin/kvm/kvm (Closes: #698736).
+  * stop shipping /usr/share/qemu/vapic.bin link (qemu uses kvmvapic.bin)
+  * stop shipping /usr/share/qemu/vgabios.bin link (qemu uses vgabios-*.bin)
+  * enable all guest audio devices
+  * add breaks/replaces/provides/conflicts with kvm (very old package),
+    qemu-kvm, and ubuntu's qemu-common.
+  * stop caring about old (pre-squeeze) qemu
+
+ -- Michael Tokarev <mjt@tls.msk.ru>  Wed, 23 Jan 2013 11:08:47 +0400
+
 qemu (1.3.0+dfsg-3exp) experimental; urgency=low
 
   * add ability to specify os-arch in configure-opts
