--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+qemu (1.3.0+dfsg-1~exp3ubuntu8) raring; urgency=low
+
+  * qemu-system.links:
+    - Add link to usr/share/ovmf/OVMF.fd (LP: #1074207)
+    - Fix target of /etc/kvm/kvm-if{up,down} links
+
+ -- Serge Hallyn <serge.hallyn@ubuntu.com>  Tue, 29 Jan 2013 10:52:22 -0600
+
 qemu (1.3.0+dfsg-1~exp3ubuntu7) raring; urgency=low
 
   * debian/control: qemu-system should Recommend cpu-checker (LP: #1103982)
