--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+qemu (1.3.0+dfsg-5expubuntu2) raring; urgency=low
+
+  * Enable spice.
+  * Address lintian warning by adding ${misc:Depends} to qemu-common and
+    qemu-kvm.
+
+ -- Serge Hallyn <serge.hallyn@ubuntu.com>  Tue, 12 Feb 2013 16:07:04 -0600
+
 qemu (1.3.0+dfsg-5expubuntu1) raring; urgency=low
 
   [ Serge Hallyn ]
