Import patches-unapplied version 1.4.0+dfsg-1exp to debian/experimental
Imported using git-ubuntu import.

Changelog parent: e4a8329db2a5e882203aac24b8acfad286445ee7

New changelog entries:
  [ Michael Tokarev ]
  * 1.4.0 final release
  * remove fix-virtio-net-for-win-guests.patch (upstream now has better fix)
  * fix debian/control arch fields. Build-Depends: foo [bar]
    means foo will be selected for build on LINUX-bar, not any-bar.
    So stop using [bar], always use [linux-bar] or [any-bar],
    as appropriate.  This fix spice and xen (non)selection on
    kfreebsd-{i386,amd64}.
  * fix manpage "links" generation (man qemu-system-* was broken)
  * change Vcs fields to point to anonscm.debian.org (lintian)
  * add a check for (vlc) container to qemu-system-x86 initscript
  [ Steve Langasek ]
  * Pass --enable-uname-release=2.6.32 for the user emulation builds, so that
    we have a sensible baseline kernel value regardless of what the
    underlying host kernel is.  This makes eglibc happier when running under
    emulation on a very old kernel for instance (whose host syscall ABI has
    nothing to do with what emulated syscalls are supported), and probably
    also lets us steer clear for the moment of code that has problem with
    the new kernel upstream versioning convention.  LP: #921078.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,32 @@
+qemu (1.4.0+dfsg-1exp) experimental; urgency=low
+
+  [ Michael Tokarev ]
+  * 1.4.0 final release
+  * remove fix-virtio-net-for-win-guests.patch (upstream now has better fix)
+  * fix debian/control arch fields. Build-Depends: foo [bar]
+    means foo will be selected for build on LINUX-bar, not any-bar.
+    So stop using [bar], always use [linux-bar] or [any-bar],
+    as appropriate.  This fix spice and xen (non)selection on
+    kfreebsd-{i386,amd64}.
+  * fix manpage "links" generation (man qemu-system-* was broken)
+  * change Vcs fields to point to anonscm.debian.org (lintian)
+  * add a check for (vlc) container to qemu-system-x86 initscript
+
+  [ Steve Langasek ]
+  * Pass --enable-uname-release=2.6.32 for the user emulation builds, so that
+    we have a sensible baseline kernel value regardless of what the
+    underlying host kernel is.  This makes eglibc happier when running under
+    emulation on a very old kernel for instance (whose host syscall ABI has
+    nothing to do with what emulated syscalls are supported), and probably
+    also lets us steer clear for the moment of code that has problem with
+    the new kernel upstream versioning convention.  LP: #921078.
+
+ -- Michael Tokarev <mjt@tls.msk.ru>  Sat, 16 Feb 2013 12:34:54 +0400
+
 qemu (1.4.0~rc0+dfsg-1exp) experimental; urgency=low
 
   * new upstream 1.4.0-rc0 (first release candidate).
+    (Closes: #549195)
   * remove patches included upstream:
     e1000-discard-oversized-packets-based-on-SBP_LPE.patch
     link-seccomp-only-with-softmmu-targets.patch
