--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+qemu (1.3.0+dfsg-5expubuntu4) raring; urgency=low
+
+  * Update workarounds for udev/inotify:  (LP: #1092715)
+    - qemu-system-common.udev: go back to original, simple rule
+    - qemu-system-common.postinst: manually run setfacl
+    - (keep Depends: on acl as well)
+    - this can be removed once bug 1092715 is fixed.
+
+ -- Serge Hallyn <serge.hallyn@ubuntu.com>  Tue, 19 Feb 2013 12:41:22 -0600
+
 qemu (1.3.0+dfsg-5expubuntu3) raring; urgency=low
 
   * Now that qemu provides spice support, and qemu-kvm-spice is removed from
